--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <!--Large Screens-->
         <div class="w3-hide-medium w3-hide-small">
             <!--Landing 1-->
-            <div id="landing-one">
+            <div id="landing-one" style="height: 1000px;">
                 <div class="w3-center w3-animate-left" id="logo-one" onclick="changeLanding()">
                     <img src="image/ESALlogo-03.png" alt="logo" class="w3-image" style="width: 220px;">
                 </div>
